--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -97,6 +97,9 @@
                         </a>
                         <ul class="nav-second-level" aria-expanded="false">
                             <li>
+                                <a href="summaryStatistics.html">统计汇总</a>
+                            </li>
+                            <li>
                                 <a href="cargoBillAddForm.html">新增货运单</a>
                             </li>
                             <li>
