--- a/src/main/resources/templates/CargoBillPage/summaryStatistics.html
+++ b/src/main/resources/templates/CargoBillPage/summaryStatistics.html
@@ -291,7 +291,7 @@
             if(response.data.success === true){
                 Swal.fire({
                     title: "查询结果",
-                    text: "装车总吨数:"+objdata.totalTonnage+"<br/>总卸车吨数:"+objdata.totalUnloadingTonnage+"<br/>总销售金额:"+objdata.totalSalesAmount+"<br/>总净利润"+objdata.totalNetProfit,
+                    text: "装车总吨数:"+objdata.totalTonnage+"<br/>总卸车吨数:"+objdata.totalUnloadingTonnage+"<br/>总销售金额:"+objdata.totalSalesAmount+"<br/>总净利润："+objdata.totalNetProfit,
                     type: "success",
                     confirmButtonText: "确定",
                     confirmButtonClass: "btn btn-success mt-2",
