--- a/src/main/resources/templates/CargoBillPage/summaryStatistics.html
+++ b/src/main/resources/templates/CargoBillPage/summaryStatistics.html
@@ -287,11 +287,14 @@
             //关闭加载层
             layer.close(loding_layLoad);
 
-            var objdata=response.data.data.records
+            var objdata=response.data.data;
             if(response.data.success === true){
                 Swal.fire({
                     title: "查询结果",
-                    text: "装车总吨数:"+objdata.totalTonnage+"<br/>总卸车吨数:"+objdata.totalUnloadingTonnage+"<br/>总销售金额:"+objdata.totalSalesAmount+"<br/>总净利润："+objdata.totalNetProfit,
+                    html: "装车总吨数:"+objdata.totalTonnage
+                        +"<br/>总卸车吨数:"+objdata.totalUnloadingTonnage
+                        +"<br/>总销售金额:"+objdata.totalSalesAmount
+                        +"<br/>总净利润："+objdata.totalNetProfit,
                     type: "success",
                     confirmButtonText: "确定",
                     confirmButtonClass: "btn btn-success mt-2",
