--- a/src/main/resources/templates/CargoBillPage/cargoBillAddForm.html
+++ b/src/main/resources/templates/CargoBillPage/cargoBillAddForm.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>新增货运单</title>
+    <title>购进</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -131,10 +131,10 @@
                         <div class="page-title-box">
                             <div class="page-title-right">
                                 <ol class="breadcrumb m-0">
-                                    <li class="breadcrumb-item active">新增货运单</li>
+                                    <li class="breadcrumb-item active">购进</li>
                                 </ol>
                             </div>
-                            <h4 class="page-title">新增货运单</h4>
+                            <h4 class="page-title">购进</h4>
                         </div>
                     </div>
                 </div>
