--- a/src/main/resources/templates/CargoBillPage/summaryStatistics.html
+++ b/src/main/resources/templates/CargoBillPage/summaryStatistics.html
@@ -291,9 +291,9 @@
             if(response.data.success === true){
                 Swal.fire({
                     title: "查询结果",
-                    html: "装车总吨数:"+objdata.totalTonnage
+                    html: "总装车吨数:"+objdata.totalTonnage
                         +"<br/>总卸车吨数:"+objdata.totalUnloadingTonnage
-                        +"<br/>总销售金额:"+objdata.totalSalesAmount
+                        +"<br/>总销售额:"+objdata.totalSalesAmount
                         +"<br/>总净利润："+objdata.totalNetProfit,
                     type: "success",
                     confirmButtonText: "确定",
