--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -403,7 +403,8 @@
                 shippingId : shippingId,
                 goodsName : goodsName,
                 goodsTime : data.goodsTime,
-                goodsNumber : data.goodsNumber
+                goodsNumber : data.goodsNumber,
+                goodsSpecification : data.goodsSpecification
             }
 
             if(layEvent === 'Shipping'){
@@ -501,7 +502,7 @@
 
         Swal.fire({
             title: "是否执行出货操作?",
-            text: "您即将出货,货物名:["+data.goodsName+"]的数据",
+            text: "您即将出货,规格:["+data.goodsSpecification+"]的数据",
             type: "info",
             showCancelButton: !0,
             confirmButtonText: "确定",
@@ -512,7 +513,10 @@
         }).then(function (t) {
             if(t.value){
                 //跳转到出货页面并携带要出货的数据ID
-                window.location.href = "Shipping.html?id="+data.shippingId+"&goodsTime="+data.goodsTime+"&goodsNumber="+data.goodsNumber;
+                window.location.href = "Shipping.html?id="+data.shippingId
+                    +"&goodsTime=" +data.goodsTime
+                    +"&goodsNumber=" +data.goodsNumber
+                    +"&goodsSpecification=" +data.goodsSpecification;
             }
         });
 
