--- a/src/main/resources/templates/CargoBillPage/cargoBillAddForm.html
+++ b/src/main/resources/templates/CargoBillPage/cargoBillAddForm.html
@@ -154,6 +154,12 @@
                                     </div>
                                 </div>
                                 <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">车号</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" name="numberPlate" class="form-control" placeholder="车牌号" required>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
                                     <label class="col-sm-2 col-form-label">时间</label>
                                     <div class="col-sm-10">
                                         <input class="form-control" type="date" name="goodsTime" required>
@@ -409,6 +415,7 @@
         $("#basic-form input[name='goods_remarks']").val(objdata[0].goodsRemarks);
         $("#basic-form input[name='goods_number']").val(objdata[0].goodsNumber);
         $("#basic-form input[name='goods_unit_price']").val(objdata[0].goodsUnitPrice);
+        $("#basic-form input[name='numberPlate']").val(objdata[0].numberPlate);
     }
     //===== 普通方法 end=====
     
