--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -296,6 +296,7 @@
                 ,{field: 'departureLocation', title: '装车地' , minWidth: 80}
                 ,{field: 'arrivedLocation', title: '卸车地' , minWidth: 80}
                 ,{field: 'goodsName', title: '名称'  , minWidth: 100}
+                ,{field: 'numberPlate', title: '车号'  , minWidth: 100}
                 ,{field: 'goodsSpecification', title: '规格'}
                 ,{field: 'goodsUnit', title: '单位', hide:true, templet: function (item) {
                     if (item.goodsUnit == '1') {
